# insurance-autodml

./: README.md  pyproject.toml
notebooks/: 01_autodml_demo.py
src/insurance_autodml/: __init__.py  _crossfit.py  _nuisance.py  dgp.py  dose_response.py  elasticity.py  policy_shift.py  report.py  selection.py
tests/: test_crossfit.py  test_dgp.py  test_dose_response.py  test_elasticity.py  test_imports.py  test_inference.py  test_nuisance.py  test_policy_shift.py  test_report.py  test_riesz.py  test_selection.py  test_types.py
