[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-autodml"
version = "0.1.0"
description = "Automatic Debiased ML via Riesz Representers for continuous treatment causal inference in UK personal lines insurance pricing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "causal-inference",
    "debiased-machine-learning",
    "riesz-representer",
    "price-elasticity",
    "dose-response",
    "double-ml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2"]
plots = ["matplotlib>=3.7"]
reports = ["jinja2>=3.1", "matplotlib>=3.7"]
genriesz = ["genriesz>=0.1"]
all = [
    "catboost>=1.2",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "genriesz>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-autodml"
Repository = "https://github.com/burning-cost/insurance-autodml"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_autodml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
